@@ -8,4 +8,3 @@ set print elements 1000
 set print null-stop
 set height 0
 set width 0
-set verbose on
