@@ -1,3 +1,7 @@
+2002-12-19  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
+	* manuals/*: Added capability to generate PDF and PS.
+	* src/debugger.c, data/gdb.init: Solaris GDB fixes.
+
 2002-12-18  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
 
 	* tagmanager/tm_global_tags.c: Fixed compiler warning.
